force-app/main/default/objects/Stamp_Field_Mapping__c/Stamp_Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Stamp Field Mapping</label>
    <nameField>
        <displayFormat>SFM-{0000}</displayFormat>
        <label>Stamp Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stamp Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>