force-app/main/default/objects/Stamp_Field_Mapping__c/fields/Field_Changed__c.field-meta.xml
<CustomField>
    <fullName>Field_Changed__c</fullName>
    <label>Field Changed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>