force-app/main/default/objects/Stamp_Field_Mapping__c/fields/Stamp_From_Field__c.field-meta.xml
<CustomField>
    <fullName>Stamp_From_Field__c</fullName>
    <label>Stamp From Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>