force-app/main/default/objects/Stamp_Field_Mapping__c/fields/Stamp_On_Field_Change__c.field-meta.xml
<CustomField>
    <fullName>Stamp_On_Field_Change__c</fullName>
    <label>Stamp On Field Change</label>
    <length>100</length>
    <type>Text</type>
</CustomField>