force-app/main/default/objects/Stamp_Field_Mapping__c/fields/Stamp_To_Object__c.field-meta.xml
<CustomField>
    <fullName>Stamp_To_Object__c</fullName>
    <label>Stamp To Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Object_Names</valueSetName>
    </valueSet>
</CustomField>