force-app/main/default/objects/Stamp_Field_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Stamp_From_Object__c</columns>
    <columns>Stamp_From_Field__c</columns>
    <columns>Stamp_To_Object__c</columns>
    <columns>Stamp_To_Field__c</columns>
    <columns>Field_Changed__c</columns>
    <columns>Field_Changed_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>